--- a/package.json
+++ b/package.json
@@ -4,11 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+     "build": "tsc",
+    "dev": "nodemon",
+    "start": "ts-node ./src/server"
   },
   "dependencies": {
     "css-inline": "^0.8.1",
-    "inline-css": "^4.0.1"
+    "inline-css": "^4.0.1",
+    "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "express": "~4.16.1",
+    "gsap": "^3.10.4",
+    "http-errors": "~1.6.3",
+    "nodemon": "^2.0.9",
+    "socket.io": "^4.1.2",
+    "ts-node": "^10.0.0",
+    "tsc": "^2.0.4",
+    "typescript": "^4.3.5"
+  },
+    "devDependencies": {
+    "@types/node": "^16.0.0",
+    "nodemon": "^2.0.9",
+    "ts-node": "^10.0.0"
   },
   "author": "",
   "license": "ISC"
